--- a/static/assets/ascii.css
+++ b/static/assets/ascii.css
@@ -1,20 +1,4 @@
 body {
-  --c-black: #1a1a1a;
-  --c-white: #e1e1e1;
-  --c-grey: #898989;
-  --c-dark-grey: #222224;
-  --c-purple: #b462ff;
-  --c-fuschia: #ff45b4;
-  --c-blue: #18b6ff;
-  --c-green: #1beb9e;
-  --c-orange: #ff9528;
-  --c-orange-low-saturation: #a5692d;
-  --c-yellow: #dddd25;
-  --line: 2.5ch;
-  --font: 'IBM', monospace;
-}
-
-body.inverted {
   --c-black: #d5d5d5;
   --c-white: #2a2830;
   --c-dark-grey: #e4e4e7;
@@ -26,6 +10,22 @@ body.inverted {
   --c-orange: #dd7200;
   --c-orange-low-saturation: #d08c47;
   --c-yellow: #949700;
+  --line: 2.5ch;
+  --font: 'IBM', monospace;
+}
+
+body.dark {
+  --c-black: #1a1a1a;
+  --c-white: #e1e1e1;
+  --c-grey: #898989;
+  --c-dark-grey: #222224;
+  --c-purple: #b462ff;
+  --c-fuschia: #ff45b4;
+  --c-blue: #18b6ff;
+  --c-green: #1beb9e;
+  --c-orange: #ff9528;
+  --c-orange-low-saturation: #a5692d;
+  --c-yellow: #dddd25;
 }
 
 .orange-low-saturation {
@@ -103,10 +103,6 @@ a:hover,
   font-weight: 200;
 }
 
-.italic {
-  font-style: italic;
-}
-
 .noselect {
   user-select: none;
 }
@@ -141,12 +137,10 @@ body {
   body {
     font-size: 1vw;
     overflow: auto;
-
-    .separator-char {
-      display: contents;
-    }
   }
-
+  .separator-char {
+    display: contents;
+  }
   .large {
     font-size: 4vw;
     line-height: 1.11111111em;
@@ -180,22 +174,8 @@ button {
   pointer-events: none;
 }
 
-body.invert canvas {
-  opacity: 0.05;
-  filter: none;
-  mix-blend-mode: normal;
-}
-
-.subtle-hover:hover {
-  opacity: 0.8;
-}
-
 .title {
   font-weight: lighter;
-}
-
-textarea {
-  min-height: 20rem;
 }
 
 .vim-folded {
@@ -218,17 +198,13 @@ textarea {
   text-overflow: clip;
 }
 
-textarea {
-  min-height: 20rem;
-}
-
 select {
   appearance: none;
   border-radius: 0.375rem;
   padding: 0.5rem 1rem;
   background-color: var(--c-dark-grey);
 }
-
+/* those elements are auto generated on server, so we can't do the styles inside a className */
 select > option {
   padding: 0.5rem;
   background-color: var(--c-dark-grey);
