Fix safari UI issues.
Close #57

--- a/static/assets/ascii.css
+++ b/static/assets/ascii.css
@@ -51,6 +51,11 @@ pre {
   background: var(--selection-bg);
 }
 
+select {
+  height: 42px;
+  -webkit-appearance: none;
+}
+
 .vim-folded {
   white-space: nowrap;
   overflow-x: hidden;
