Fix UI on report page.

--- a/static/assets/ascii.css
+++ b/static/assets/ascii.css
@@ -66,7 +66,7 @@ select {
   }
 
   &::after {
-    content: '\00A0····················································';
+    content: '\00A0······················································································································';
     display: inline;
     text-align: start;
     overflow: hidden;
