--- a/static/assets/ascii.css
+++ b/static/assets/ascii.css
@@ -88,3 +88,48 @@ select > option {
   padding: 0.5rem;
   background-color: var(--c-dark-grey);
 }
+
+/* Line numbering in source code and configuration blocks */
+.code-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  white-space: pre;
+  position: relative;
+  line-height: normal;
+}
+
+.code-list::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 2.5em;
+  width: 1px;
+  background-color: var(--c-grey);
+  opacity: 0.3;
+}
+
+.code-list li {
+  position: relative;
+  padding: 0 0 0 3.2em;
+  margin: 0;
+  white-space: pre;
+  line-height: inherit;
+  display: block;
+  height: auto;
+}
+
+.code-list li::before {
+  counter-increment: line;
+  content: counter(line);
+  position: absolute;
+  left: 0.2em;
+  width: 2em;
+  text-align: right;
+  color: var(--c-grey);
+  user-select: none;
+  opacity: 0.7;
+  padding-right: 0.3em;
+}
