--- a/static/assets/ascii.css
+++ b/static/assets/ascii.css
@@ -90,46 +90,46 @@ select > option {
 }
 
 /* Line numbering in source code and configuration blocks */
-.code-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.code-container {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
   font-family: inherit;
-  white-space: pre;
   position: relative;
   line-height: normal;
+  background-color: var(--c-dark-grey);
 }
 
-.code-list::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 2.5em;
-  width: 1px;
-  background-color: var(--c-grey);
-  opacity: 0.3;
-}
-
-.code-list li {
-  position: relative;
-  padding: 0 0 0 3.2em;
-  margin: 0;
-  white-space: pre;
-  line-height: inherit;
-  display: block;
-  height: auto;
-}
-
-.code-list li::before {
-  counter-increment: line;
-  content: counter(line);
-  position: absolute;
-  left: 0.2em;
-  width: 2em;
-  text-align: right;
-  color: var(--c-grey);
+.line-numbers {
+  flex: 0 0 3em;
+  min-width: 3em;
   user-select: none;
-  opacity: 0.7;
-  padding-right: 0.3em;
+  display: flex;
+  flex-direction: column;
+  color: var(--c-grey);
+  text-align: right;
+  border-right: 1px solid rgba(126, 126, 126, 0.3);
+  background-color: var(--c-dark-grey);
+  z-index: 2;
+  padding-left: 0.5em;
+}
+
+.line-number {
+  padding-right: 0.5em;
+  height: 1.2em;
+  line-height: 1.2em;
+}
+
+.code-content {
+  flex: 1;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: pre;
+}
+
+.code-line {
+  padding-left: 0.5em;
+  height: 1.2em;
+  line-height: 1.2em;
+  min-height: 1.2em;
 }
